--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -20166,31 +20166,81 @@ FONT 8, "MS Sans Serif"
   CONTROL "TPages", 110, "TPages", WS_TABSTOP, 44, 34, 443, 246
 }
 
-GENFAC_03 DIALOG DISCARDABLE 11, 16, 449, 249
+GENFAC_03 DIALOG DISCARDABLE 11, 16, 449, 243
 STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "Rangos", -1, "Button", BS_GROUPBOX, 2, 2, 332, 128
+  CONTROL "", 110, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 9, 13, 125, 134
   CONTROL "", 120, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 168, 14, 60, 12
   CONTROL "", 130, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 267, 14, 60, 12
-  CONTROL "Desde", -1, "Static", WS_GROUP, 137, 18, 30, 8
-  CONTROL "Hasta ", -1, "Static", WS_GROUP, 236, 18, 30, 8
+  CONTROL "Todos los grupos de clientes", 140, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 9, 39, 105, 9
   CONTROL "", 150, "Edit", WS_BORDER|WS_TABSTOP, 51, 51, 74, 12
   CONTROL "", 151, "Edit", WS_BORDER|WS_TABSTOP, 127, 51, 200, 12
-  CONTROL "", 160, "Edit", WS_BORDER|WS_TABSTOP, 51, 63, 74, 12
-  CONTROL "", 161, "Edit", WS_BORDER|WS_TABSTOP, 127, 63, 200, 12
-  CONTROL "", 180, "Edit", WS_BORDER|WS_TABSTOP, 51, 98, 74, 12
-  CONTROL "", 190, "Edit", WS_BORDER|WS_TABSTOP, 51, 110, 74, 12
-  CONTROL "", 191, "Edit", WS_BORDER|WS_TABSTOP, 127, 110, 200, 12
-  CONTROL "Desde", 152, "Static", WS_GROUP, 20, 54, 30, 8
-  CONTROL "Hasta ", 162, "Static", WS_GROUP, 20, 66, 30, 8
-  CONTROL "Desde", -1, "Static", WS_GROUP, 20, 101, 30, 8
-  CONTROL "Hasta ", -1, "Static", WS_GROUP, 20, 113, 30, 8
-  CONTROL "Todos los grupos de clientes", 140, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 9, 39, 105, 9
+  CONTROL "", 160, "Edit", WS_BORDER|WS_TABSTOP, 51, 64, 74, 12
+  CONTROL "", 161, "Edit", WS_BORDER|WS_TABSTOP, 127, 64, 200, 12
   CONTROL "Todos los clientes", 170, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 9, 86, 70, 9
-  CONTROL "", -1, "Static", SS_ETCHEDHORZ, 9, 33, 320, 1
-  CONTROL "", 110, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 9, 13, 125, 134
-  CONTROL "", -1, "Static", SS_ETCHEDHORZ, 9, 81, 320, 1
+  CONTROL "", 180, "Edit", WS_BORDER|WS_TABSTOP, 51, 98, 74, 12
   CONTROL "", 181, "Edit", WS_BORDER|WS_TABSTOP, 127, 98, 200, 12
+  CONTROL "", 190, "Edit", WS_BORDER|WS_TABSTOP, 51, 111, 74, 12
+  CONTROL "", 191, "Edit", WS_BORDER|WS_TABSTOP, 127, 111, 200, 12
+  CONTROL "Factura", 210, "Button", BS_AUTORADIOBUTTON, 8, 146, 37, 10
+  CONTROL "Albarán", 220, "Button", BS_AUTORADIOBUTTON, 8, 158, 37, 10
+  CONTROL "", 230, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 51, 143, 60, 12
+  CONTROL "Generar sobre serie de albarán", 240, "Button", BS_AUTORADIOBUTTON, 178, 144, 120, 10
+  CONTROL "Generar sobre serie", 250, "Button", BS_AUTORADIOBUTTON, 178, 156, 72, 10
+  CONTROL "", 260, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 257, 154, 40, 12
+  CONTROL "Agrupar por clientes", 270, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 8, 184, 76, 11
+  CONTROL "Facturar por cada dirección", 280, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 18, 197, 103, 11
+  CONTROL "Solo albaranes entregados", 290, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 178, 186, 100, 11
+  CONTROL "Unificar formas de pago", 291, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 178, 198, 88, 11
+  CONTROL "Totalizar por albaranes", 292, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 178, 210, 88, 11
+  CONTROL "Todas", 310, "Static", WS_GROUP, 344, 16, 30, 8
+  CONTROL "Ninguna", 320, "Static", WS_GROUP, 393, 16, 30, 8
+  CONTROL "Serie A", 370, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 344, 30, 40, 10
+  CONTROL "Serie B", 371, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 344, 42, 40, 10
+  CONTROL "Serie C", 372, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 344, 54, 39, 10
+  CONTROL "Serie D", 373, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 344, 66, 39, 10
+  CONTROL "Serie E", 374, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 344, 78, 37, 10
+  CONTROL "Serie F", 375, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 344, 90, 39, 10
+  CONTROL "Serie G", 376, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 344, 102, 40, 10
+  CONTROL "Serie H", 377, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 344, 114, 38, 10
+  CONTROL "Serie I", 378, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 344, 126, 34, 10
+  CONTROL "Serie J", 379, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 344, 138, 38, 10
+  CONTROL "Serie K", 380, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 344, 150, 38, 10
+  CONTROL "Serie L", 381, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 344, 162, 39, 10
+  CONTROL "Serie M", 382, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 344, 174, 40, 10
+  CONTROL "Serie N", 383, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 393, 29, 40, 10
+  CONTROL "Serie O", 384, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 393, 42, 40, 10
+  CONTROL "Serie P", 385, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 393, 54, 40, 10
+  CONTROL "Serie Q", 386, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 393, 66, 39, 10
+  CONTROL "Serie R", 387, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 393, 78, 39, 10
+  CONTROL "Serie S", 388, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 393, 90, 37, 10
+  CONTROL "Serie T", 389, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 393, 102, 39, 10
+  CONTROL "Serie U", 390, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 393, 114, 40, 10
+  CONTROL "Serie V", 391, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 393, 126, 38, 10
+  CONTROL "Serie W", 392, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 393, 138, 37, 10
+  CONTROL "Serie X", 393, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 393, 150, 38, 10
+  CONTROL "Serie Y", 394, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 393, 162, 38, 10
+  CONTROL "Serie Z", 395, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 393, 174, 39, 10
+  CONTROL "Rangos", -1, "Button", BS_GROUPBOX, 2, 2, 332, 128
+  CONTROL "Desde", -1, "Static", WS_GROUP, 137, 18, 30, 8
+  CONTROL "Hasta ", -1, "Static", WS_GROUP, 236, 18, 30, 8
+  CONTROL "Desde", 152, "Static", WS_GROUP, 20, 54, 30, 8
+  CONTROL "Hasta ", 162, "Static", WS_GROUP, 20, 67, 30, 8
+  CONTROL "Desde", 182, "Static", WS_GROUP, 20, 101, 30, 8
+  CONTROL "Hasta ", 192, "Static", WS_GROUP, 20, 114, 30, 8
+  CONTROL "", -1, "Static", SS_ETCHEDHORZ, 9, 33, 320, 1
+  CONTROL "", -1, "Static", SS_ETCHEDHORZ, 9, 81, 320, 1
+  CONTROL "Series", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 337, 2, 104, 234
+  CONTROL "Propiedades", -1, "Button", BS_GROUPBOX, 2, 173, 332, 63
+  CONTROL "Fechas de facturas", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 2, 131, 164, 39
+  CONTROL "Series de facturas", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 169, 131, 165, 39
+}
+
+GENFAC_04 DIALOG DISCARDABLE 11, 16, 449, 243
+STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
+FONT 8, "MS Sans Serif"
+{
+  CONTROL "Segunda Pestaña", -1, "Static", WS_GROUP, 137, 18, 146, 8
 }
 
