--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -20241,6 +20241,6 @@ GENFAC_04 DIALOG DISCARDABLE 11, 16, 449, 243
 STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "Segunda Pestaña", -1, "Static", WS_GROUP, 137, 18, 146, 8
+  CONTROL "", 100, "TXBrowse", WS_TABSTOP|0x00a00000, 4, 4, 438, 234
 }
 
