--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -12037,17 +12037,17 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 620, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 132, 87, 49, 33
   CONTROL "", 630, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 196, 87, 70, 12
   CONTROL "", 640, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER, 280, 87, 70, 12
-  CONTROL "", 650, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 76, 100, 10, 12
+  CONTROL "", 650, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 76, 101, 10, 12
   CONTROL "", 660, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 91, 101, 38, 12
   CONTROL "", 670, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 132, 101, 49, 33
   CONTROL "", 680, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 196, 101, 70, 12
   CONTROL "", 690, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER, 280, 101, 70, 12
-  CONTROL "", 700, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 76, 114, 10, 12
+  CONTROL "", 700, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 76, 115, 10, 12
   CONTROL "", 710, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 91, 115, 38, 12
   CONTROL "", 720, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 132, 115, 49, 33
   CONTROL "", 730, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 196, 115, 70, 12
   CONTROL "", 740, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER, 280, 115, 70, 12
-  CONTROL "", 750, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 76, 128, 10, 12
+  CONTROL "", 750, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 76, 129, 10, 12
   CONTROL "", 760, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 91, 129, 38, 12
   CONTROL "", 770, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 132, 129, 49, 33
   CONTROL "", 780, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 196, 129, 70, 12
@@ -12060,21 +12060,21 @@ FONT 8, "MS Sans Serif"
   CONTROL "Impuestos", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 3, 1, 352, 24
   CONTROL "", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 3, 25, 352, 136
   CONTROL "Precio de compra", -1, "Static", WS_GROUP, 8, 36, 65, 8
-  CONTROL "Precio 1", -1, "Static", WS_GROUP, 8, 60, 30, 10
-  CONTROL "Precio 2", -1, "Static", WS_GROUP, 8, 74, 30, 10
-  CONTROL "Precio 3", -1, "Static", WS_GROUP, 8, 88, 30, 10
-  CONTROL "Precio 4", -1, "Static", WS_GROUP, 8, 102, 30, 10
-  CONTROL "Precio 5", -1, "Static", WS_GROUP, 8, 116, 30, 10
-  CONTROL "Precio 6", -1, "Static", WS_GROUP, 8, 130, 30, 10
+  CONTROL "Precio 1", -1, "Static", WS_GROUP, 8, 61, 30, 10
+  CONTROL "Precio 2", -1, "Static", WS_GROUP, 8, 75, 30, 10
+  CONTROL "Precio 3", -1, "Static", WS_GROUP, 8, 89, 30, 10
+  CONTROL "Precio 4", -1, "Static", WS_GROUP, 8, 103, 30, 10
+  CONTROL "Precio 5", -1, "Static", WS_GROUP, 8, 117, 30, 10
+  CONTROL "Precio 6", -1, "Static", WS_GROUP, 8, 131, 30, 10
   CONTROL "%Beneficio", -1, "Button", BS_GROUPBOX, 47, 49, 139, 96
   CONTROL "Neto", -1, "Button", BS_GROUPBOX, 190, 49, 82, 96
   CONTROL "Impuestos incluidos", -1, "Button", BS_GROUPBOX, 274, 49, 82, 96
-  CONTROL "Bloq.", -1, "Static", WS_GROUP, 53, 60, 23, 10
+  CONTROL "Bloq.", -1, "Static", WS_GROUP, 53, 61, 23, 10
   CONTROL "Bloq.", -1, "Static", WS_GROUP, 53, 75, 23, 10
-  CONTROL "Bloq.", -1, "Static", WS_GROUP, 53, 88, 23, 10
-  CONTROL "Bloq.", -1, "Static", WS_GROUP, 53, 102, 23, 10
-  CONTROL "Bloq.", -1, "Static", WS_GROUP, 53, 116, 23, 10
-  CONTROL "Bloq.", -1, "Static", WS_GROUP, 53, 130, 23, 10
+  CONTROL "Bloq.", -1, "Static", WS_GROUP, 53, 89, 23, 10
+  CONTROL "Bloq.", -1, "Static", WS_GROUP, 53, 103, 23, 10
+  CONTROL "Bloq.", -1, "Static", WS_GROUP, 53, 117, 23, 10
+  CONTROL "Bloq.", -1, "Static", WS_GROUP, 53, 131, 23, 10
   CONTROL "Stock", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 3, 164, 352, 49
 }
 
@@ -20242,5 +20242,19 @@ STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
   CONTROL "", 100, "TXBrowse", WS_TABSTOP|0x00a00000, 4, 4, 438, 234
+}
+
+LANGUAGE LANG_ENGLISH,SUBLANG_ENGLISH_US
+
+LALBPRV_4 DIALOG DISCARDABLE 135, 103, 405, 209
+STYLE WS_CHILD|DS_3DLOOK
+FONT 8, "MS Sans Serif"
+{
+  CONTROL "", 100, "Edit", ES_MULTILINE|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 61, 8, 331, 168
+  CONTROL "", 370, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 61, 179, 70, 12
+  CONTROL "", 380, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 61, 193, 70, 12
+  CONTROL "Observaciones", -1, "Static", WS_GROUP, 4, 8, 50, 8
+  CONTROL "Fecha entrada", 4001, "Static", WS_GROUP, 4, 182, 51, 8
+  CONTROL "Fecha cierre", 4002, "Static", WS_GROUP, 4, 196, 51, 8
 }
 
