--- a/resource/Gsttactil.rc
+++ b/resource/Gsttactil.rc
@@ -92,7 +92,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "NTOTAL", 420, "Static", SS_RIGHT|WS_BORDER|WS_GROUP, -242, -1, 112, 23
   CONTROL "NTOTAL", 430, "Static", SS_RIGHT|WS_BORDER|WS_GROUP, -242, 23, 112, 24
   CONTROL "", -1, "Button", BS_GROUPBOX, -245, -32, 117, 81
-  CONTROL "", 460, "msctls_progress32", WS_BORDER|WS_TABSTOP, 2, 322, 182, 4
+  CONTROL "", 460, "msctls_progress32", WS_TABSTOP|0x00800000, 2, 322, 182, 4
   CONTROL "", 201, "Button", WS_TABSTOP, 237, 8, 40, 38
   CONTROL "", 202, "Button", WS_TABSTOP, 237, 61, 40, 38
   CONTROL "", 203, "Button", WS_TABSTOP, 237, 114, 40, 38
@@ -418,7 +418,7 @@ FONT 8, "MS Sans Serif"
 }
 
 ARQUEO_3 DIALOG DISCARDABLE -47, 69, 605, 318
-STYLE WS_CHILD|DS_3DLOOK
+STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
   CONTROL "", 800, "TXBrowse", WS_TABSTOP|0x00a00000, 44, 58, 557, 193
@@ -718,7 +718,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "NTOTAL", 420, "Static", SS_RIGHT|WS_BORDER|WS_GROUP, -242, -1, 112, 23
   CONTROL "NTOTAL", 430, "Static", SS_RIGHT|WS_BORDER|WS_GROUP, -242, 23, 112, 24
   CONTROL "", -1, "Button", BS_GROUPBOX, -245, -32, 117, 81
-  CONTROL "", 460, "msctls_progress32", WS_BORDER|WS_TABSTOP, 4, 429, 205, 6
+  CONTROL "", 460, "msctls_progress32", WS_TABSTOP|0x00800000, 4, 429, 205, 6
   CONTROL "", 501, "Button", BS_BOTTOM|BS_MULTILINE|WS_TABSTOP, 217, 83, 61, 64
   CONTROL "", 203, "Button", BS_MULTILINE|WS_TABSTOP, 217, 170, 61, 64
   CONTROL "", 204, "Button", BS_MULTILINE|WS_TABSTOP, 281, 170, 61, 64
@@ -1011,7 +1011,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "NTOTAL", 420, "Static", SS_RIGHT|WS_BORDER|WS_GROUP, -242, -1, 112, 23
   CONTROL "NTOTAL", 430, "Static", SS_RIGHT|WS_BORDER|WS_GROUP, -242, 23, 112, 24
   CONTROL "", -1, "Button", BS_GROUPBOX, -245, -32, 117, 81
-  CONTROL "", 460, "msctls_progress32", WS_BORDER|WS_TABSTOP, 473, 434, 202, 6
+  CONTROL "", 460, "msctls_progress32", WS_TABSTOP|0x00800000, 473, 434, 202, 6
   CONTROL "", 116, "Button", WS_TABSTOP, 626, 404, 50, 28
   CONTROL "", 115, "Button", WS_TABSTOP, 626, 375, 50, 28
   CONTROL "", 113, "Button", WS_TABSTOP, 626, 317, 50, 28
@@ -1217,7 +1217,7 @@ FONT 20, "Segoe UI"
   CONTROL "0", 300, "Static", SS_RIGHT|WS_GROUP, 50, 124, 63, 12
 }
 
-ARQUEO_4_TCT DIALOG DISCARDABLE -47, 69, 350, 202
+ARQUEO_4_TCT DIALOG DISCARDABLE -47, 69, 350, 201
 STYLE WS_CHILD|WS_VISIBLE
 FONT 12, "Segoe UI"
 {
@@ -1231,9 +1231,8 @@ FONT 12, "Segoe UI"
   CONTROL "", 620, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|CBS_OWNERDRAWFIXED|CBS_DISABLENOSCROLL|WS_VSCROLL|WS_TABSTOP, 6, 104, 80, 72
   CONTROL "Comentarios", -1, "Button", BS_GROUPBOX|WS_DISABLED, 2, 2, 344, 78
   CONTROL "Opciones impresión", 610, "Button", BS_MULTILINE|WS_TABSTOP, 307, 92, 36, 22
-  CONTROL "Enviar y recepcionar información", 700, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 6, 170, 118, 10
-  CONTROL "Imprimir resultado envio", 710, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 24, 179, 87, 10
-  CONTROL "Actualización stocks en prestashop", 740, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 6, 187, 130, 10
+  CONTROL "Enviar y recepcionar información", 700, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 6, 172, 118, 10
+  CONTROL "Imprimir resultado envio", 710, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 24, 184, 87, 10
 }
 
 ARQUEO_4 DIALOG DISCARDABLE -47, 69, 605, 318
@@ -1242,11 +1241,11 @@ FONT 8, "MS Sans Serif"
 {
   CONTROL "Comentarios", -1, "Button", BS_GROUPBOX|WS_DISABLED, 45, 26, 557, 131
   CONTROL "Opciones de impresión", 601, "Button", BS_GROUPBOX|WS_DISABLED, 44, 159, 558, 62
-  CONTROL "Más opciones", 701, "Button", BS_GROUPBOX|WS_DISABLED, 44, 264, 558, 51
+  CONTROL "Más opciones", 701, "Button", BS_GROUPBOX|WS_DISABLED, 44, 264, 558, 41
   CONTROL "Notificación", 721, "Button", BS_GROUPBOX|WS_DISABLED, 44, 222, 558, 40
   CONTROL "", 200, "Edit", ES_MULTILINE|ES_AUTOVSCROLL|WS_BORDER|WS_TABSTOP, 51, 39, 545, 111
   CONTROL "Enviar y recepcionar información", 700, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 51, 276, 125, 10
-  CONTROL "Imprimir resultado envio", 710, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 79, 289, 125, 10
+  CONTROL "Imprimir resultado envio", 710, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 79, 290, 125, 10
   CONTROL "No imprimir arqueo", 600, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 51, 172, 71, 10
   CONTROL "Enviar email ", 720, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 51, 235, 79, 10
   CONTROL "", 730, "Edit", WS_BORDER|WS_TABSTOP, 51, 247, 545, 11
@@ -1255,7 +1254,6 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 620, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|CBS_OWNERDRAWFIXED|CBS_DISABLENOSCROLL|WS_VSCROLL|WS_TABSTOP, 79, 184, 98, 72
   CONTROL "", 990, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
   CONTROL "Apunte de agenda", -1, "Static", WS_GROUP, 44, 3, 120, 8
-  CONTROL "Actualización stocks en prestashop", 740, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 51, 302, 130, 10
 }
 
 DTO_TCT DIALOG DISCARDABLE 240, 79, 164, 154
@@ -1616,7 +1614,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "NTOTAL", 420, "Static", SS_RIGHT|WS_BORDER|WS_GROUP, -242, -1, 112, 23
   CONTROL "NTOTAL", 430, "Static", SS_RIGHT|WS_BORDER|WS_GROUP, -242, 23, 112, 24
   CONTROL "", -1, "Button", BS_GROUPBOX, -245, -32, 117, 81
-  CONTROL "", 460, "msctls_progress32", WS_BORDER|WS_TABSTOP, 4, 413, 205, 6
+  CONTROL "", 460, "msctls_progress32", WS_TABSTOP|0x00800000, 4, 413, 205, 6
   CONTROL "", 501, "Button", BS_BOTTOM|BS_MULTILINE|WS_TABSTOP, 302, 83, 61, 64
   CONTROL "", 203, "Button", BS_MULTILINE|WS_TABSTOP, 302, 167, 61, 64
   CONTROL "", 204, "Button", BS_MULTILINE|WS_TABSTOP, 366, 167, 61, 64
@@ -1902,7 +1900,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "NTOTAL", 420, "Static", SS_RIGHT|WS_BORDER|WS_GROUP, -242, -1, 112, 23
   CONTROL "NTOTAL", 430, "Static", SS_RIGHT|WS_BORDER|WS_GROUP, -242, 23, 112, 24
   CONTROL "", -1, "Button", BS_GROUPBOX, -245, -32, 117, 81
-  CONTROL "", 400, "msctls_progress32", WS_BORDER|WS_TABSTOP, 1, 356, 688, 4
+  CONTROL "", 400, "msctls_progress32", WS_TABSTOP|0x00800000, 1, 356, 688, 4
   CONTROL "", 503, "Button", WS_TABSTOP, 387, 319, 42, 36
   CONTROL "", 115, "Button", NOT WS_VISIBLE|WS_TABSTOP, 644, 281, 42, 36
   CONTROL "", 113, "Button", NOT WS_VISIBLE|WS_TABSTOP, 644, 208, 42, 36
@@ -2056,16 +2054,15 @@ FONT 12, "Segoe UI"
   CONTROL "", 200, "Edit", ES_MULTILINE|ES_AUTOVSCROLL|WS_BORDER|WS_TABSTOP, 6, 12, 337, 22
   CONTROL "No imprimir arqueo", 600, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 6, 49, 71, 8
   CONTROL "Impresión", -1, "Button", BS_GROUPBOX|WS_DISABLED, 3, 38, 343, 36
-  CONTROL "Opciones", -1, "Button", BS_GROUPBOX|WS_DISABLED, 2, 106, 343, 37
-  CONTROL "Enviar email ", 720, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 6, 83, 53, 8
-  CONTROL "Notificación", -1, "Button", BS_GROUPBOX|WS_DISABLED, 2, 74, 343, 32
-  CONTROL "", 730, "Edit", WS_BORDER|WS_TABSTOP, 6, 93, 300, 10
+  CONTROL "Opciones", -1, "Button", BS_GROUPBOX|WS_DISABLED, 2, 112, 343, 31
+  CONTROL "Enviar email ", 720, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 6, 87, 53, 8
+  CONTROL "Notificación", -1, "Button", BS_GROUPBOX|WS_DISABLED, 2, 76, 343, 34
+  CONTROL "", 730, "Edit", WS_BORDER|WS_TABSTOP, 6, 97, 300, 10
   CONTROL "", 620, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|CBS_OWNERDRAWFIXED|CBS_DISABLENOSCROLL|WS_VSCROLL|WS_TABSTOP, 6, 59, 80, 72
   CONTROL "Comentarios", -1, "Button", BS_GROUPBOX|WS_DISABLED, 2, 2, 344, 35
   CONTROL "Opciones de impresión", 610, "Button", BS_MULTILINE|WS_TABSTOP, 298, 44, 45, 28
-  CONTROL "Enviar y recepcionar información", 700, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 6, 115, 118, 8
-  CONTROL "Imprimir resultado envio", 710, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 24, 124, 87, 8
-  CONTROL "Actualización stocks en prestashop", 740, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 6, 132, 130, 10
+  CONTROL "Enviar y recepcionar información", 700, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 6, 122, 118, 8
+  CONTROL "Imprimir resultado envio", 710, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 24, 131, 87, 8
 }
 
 CASHBIG_1024X576 DIALOG DISCARDABLE -9, -141, 230, 169
@@ -2335,7 +2332,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "NTOTAL", 420, "Static", SS_RIGHT|WS_BORDER|WS_GROUP, -242, -1, 112, 23
   CONTROL "NTOTAL", 430, "Static", SS_RIGHT|WS_BORDER|WS_GROUP, -242, 23, 112, 24
   CONTROL "", -1, "Button", BS_GROUPBOX, -245, -32, 117, 81
-  CONTROL "", 400, "msctls_progress32", WS_BORDER|WS_TABSTOP, 1, 257, 523, 5
+  CONTROL "", 400, "msctls_progress32", WS_TABSTOP|0x00800000, 1, 257, 523, 5
   CONTROL "", 503, "Button", WS_TABSTOP, 361, 223, 32, 32
   CONTROL "", 115, "Button", NOT WS_VISIBLE|WS_TABSTOP, 492, 189, 32, 32
   CONTROL "", 113, "Button", NOT WS_VISIBLE|WS_TABSTOP, 492, 123, 32, 32
@@ -2471,18 +2468,5 @@ FONT 12, "Segoe UI"
   CONTROL "", 111, "Button", WS_TABSTOP, 32, 170, 30, 22
   CONTROL "", IDCANCEL, "Button", WS_TABSTOP, 230, 170, 30, 22
   CONTROL "", 100, "C5ImageView", WS_TABSTOP|0x00800000, 2, 2, 258, 166
-}
-
-LANGUAGE LANG_ENGLISH,SUBLANG_ENGLISH_US
-
-LOTE_TCT DIALOG DISCARDABLE 6, 18, 157, 30
-STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
-CAPTION "Lote"
-FONT 20, "Segoe UI"
-{
-  CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 19, 3, 136, 10
-  CONTROL "", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 122, 16, 16, 12
-  CONTROL "", IDCANCEL, "Button", WS_TABSTOP, 139, 16, 16, 12
-  CONTROL "Lote", -1, "Static", WS_GROUP, 2, 5, 16, 8
 }
 
