--- a/resource/Gstimage12.rc
+++ b/resource/Gstimage12.rc
@@ -82,3 +82,23 @@ printer_delete BITMAP "..\\bmp\\printer_delete.bmp"
 printer_new BITMAP "..\\bmp\\printer_new.bmp"
 photo_scenery_16 BITMAP "..\\bmp\\photo_scenery_16.bmp"
 scales_32 BITMAP "..\\bmp\\scales_32.bmp"
+flat_add_64 BITMAP "..\\bmp\\flat_add_64.bmp"
+flat_check_64 BITMAP "..\\bmp\\flat_check_64.bmp"
+flat_config_64 BITMAP "..\\bmp\\flat_config_64.bmp"
+flat_del_64 BITMAP "..\\bmp\\flat_del_64.bmp"
+flat_edit_64 BITMAP "..\\bmp\\flat_edit_64.bmp"
+flat_end_64 BITMAP "..\\bmp\\flat_end_64.bmp"
+flat_minus_64 BITMAP "..\\bmp\\flat_minus_64.bmp"
+flat_up_64 BITMAP "..\\bmp\\flat_up_64.bmp"
+flat_down_64 BITMAP "..\\bmp\\flat_down_64.bmp"
+flat_document_64 BITMAP "..\\bmp\\flat_document_64.bmp"
+flat_page_up_64 BITMAP "..\\bmp\\flat_page_up_64.bmp"
+flat_page_down_64 BITMAP "..\\bmp\\flat_page_down_64.bmp"
+flat_left_64 BITMAP "..\\bmp\\flat_left_64.bmp"
+flat_right_64 BITMAP "..\\bmp\\flat_right_64.bmp"
+flat_printer_64 BITMAP "..\\bmp\\flat_printer_64.bmp"
+control_panel2_alpha_48 BITMAP "..\\bmp\\control_panel2_alpha_48.bmp"
+control_panel2_48 BITMAP "..\\bmp\\control_panel2_48.bmp"
+flat_clipboard_empty_user1_64 BITMAP "..\\bmp\\flat_clipboard_empty_user1_64.bmp"
+flat_about_64 BITMAP "..\\bmp\\flat_about_64.bmp"
+flat_atom_64 BITMAP "..\\bmp\\flat_atom_64.bmp"
