Añadir la hora a Factura y Factura  Restificativa

--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -6837,14 +6837,14 @@ FACPRV_1 DIALOG DISCARDABLE 50, 35, 670, 378
 STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 140, "Edit", WS_BORDER|WS_TABSTOP, 230, 30, 90, 11
-  CONTROL "", 141, "Edit", WS_BORDER|WS_TABSTOP, 230, 42, 215, 11
-  CONTROL "", 106, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 230, 54, 90, 11
-  CONTROL "", 103, "Edit", WS_BORDER|WS_TABSTOP, 230, 66, 215, 11
-  CONTROL "", 104, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 230, 78, 58, 11
-  CONTROL "", 105, "Edit", WS_BORDER|WS_TABSTOP, 290, 78, 155, 11
-  CONTROL "", 108, "Edit", WS_BORDER|WS_TABSTOP, 230, 90, 215, 11
-  CONTROL "", 107, "Edit", ES_AUTOHSCROLL|WS_BORDER, 230, 102, 90, 11
+  CONTROL "", 140, "Edit", WS_BORDER|WS_TABSTOP, 242, 30, 90, 11
+  CONTROL "", 141, "Edit", WS_BORDER|WS_TABSTOP, 242, 42, 200, 11
+  CONTROL "", 106, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 242, 54, 90, 11
+  CONTROL "", 103, "Edit", WS_BORDER|WS_TABSTOP, 242, 66, 200, 11
+  CONTROL "", 104, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 242, 78, 58, 11
+  CONTROL "", 105, "Edit", WS_BORDER|WS_TABSTOP, 302, 78, 140, 11
+  CONTROL "", 108, "Edit", WS_BORDER|WS_TABSTOP, 242, 90, 200, 11
+  CONTROL "", 107, "Edit", ES_AUTOHSCROLL|WS_BORDER, 242, 102, 90, 11
   CONTROL "", 150, "Edit", WS_BORDER|WS_TABSTOP, 482, 30, 70, 11
   CONTROL "", 151, "Edit", WS_BORDER, 554, 30, 108, 11
   CONTROL "", 160, "Edit", WS_BORDER|WS_TABSTOP, 482, 42, 70, 11
@@ -6861,7 +6861,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 482, 90, 70, 11
   CONTROL "", 171, "TBitmap", 0x00800000, 554, 90, 19, 11
   CONTROL "", 180, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 575, 90, 87, 11
-  CONTROL "", 120, "Edit", WS_BORDER|WS_TABSTOP, 91, 102, 85, 11
+  CONTROL "", 120, "Edit", WS_BORDER|WS_TABSTOP, 84, 102, 101, 11
   CONTROL "Aña&dir [F2]", 500, "Button", WS_TABSTOP, 44, 115, 50, 14
   CONTROL "&Modificar [F3]", 501, "Button", WS_TABSTOP, 99, 115, 50, 14
   CONTROL "&Eliminar [F4]", 502, "Button", WS_TABSTOP, 154, 115, 50, 14
@@ -6882,26 +6882,27 @@ FONT 8, "MS Sans Serif"
   CONTROL "R.E.", 400, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 501, 326, 27, 10
   CONTROL "", 440, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|CBS_SORT|WS_VSCROLL|WS_TABSTOP, 501, 337, 53, 40
   CONTROL "", 450, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 555, 337, 34, 13
-  CONTROL "", 100, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 91, 30, 26, 11
-  CONTROL "", 101, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 118, 30, 38, 11
-  CONTROL "", 102, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 157, 30, 19, 11
-  CONTROL "", 570, "Edit", WS_BORDER|WS_TABSTOP, 91, 42, 85, 11
-  CONTROL "", 110, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 91, 54, 85, 11
+  CONTROL "", 100, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 84, 30, 26, 11
+  CONTROL "", 101, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 111, 30, 38, 11
+  CONTROL "", 102, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 150, 30, 36, 11
+  CONTROL "", 570, "Edit", WS_BORDER|WS_TABSTOP, 84, 43, 102, 11
+  CONTROL "", 110, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 84, 56, 60, 11
+  CONTROL "", 111, "Edit", WS_BORDER|WS_TABSTOP, 146, 56, 40, 11
   CONTROL "Régimen especial del criterio de caja", 195, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 44, 67, 129, 10
-  CONTROL "G", 512, "Button", WS_TABSTOP, 79, 78, 11, 11
-  CONTROL "", 130, "Edit", WS_BORDER|WS_TABSTOP, 91, 78, 85, 11
+  CONTROL "G", 512, "Button", WS_TABSTOP, 73, 78, 11, 11
+  CONTROL "", 130, "Edit", WS_BORDER|WS_TABSTOP, 85, 78, 100, 11
   CONTROL "Factura de gastos", 550, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 44, 92, 71, 10
   CONTROL "Número", -1, "Static", WS_GROUP, 44, 33, 35, 8
   CONTROL "Fecha", -1, "Static", WS_GROUP, 44, 57, 35, 8
-  CONTROL "Albarán", -1, "Static", WS_GROUP, 44, 81, 35, 8
+  CONTROL "Albarán", -1, "Static", WS_GROUP, 44, 81, 29, 8
   CONTROL "Su factura", -1, "Static", WS_GROUP, 44, 105, 38, 8
-  CONTROL "Proveedor", -1, "Static", WS_GROUP, 180, 33, 38, 8
-  CONTROL "Nombre", -1, "Static", WS_GROUP, 180, 45, 30, 8
-  CONTROL "Domicilio", -1, "Static", WS_GROUP, 180, 69, 33, 8
-  CONTROL "CP/Población", -1, "Static", WS_GROUP, 180, 81, 49, 8
-  CONTROL "N.I.F.", -1, "Static", WS_GROUP, 180, 57, 23, 8
-  CONTROL "Provincia", -1, "Static", WS_GROUP, 180, 93, 35, 8
-  CONTROL "Teléfono", -1, "Static", WS_GROUP, 180, 105, 33, 8
+  CONTROL "Proveedor", -1, "Static", WS_GROUP, 192, 33, 38, 8
+  CONTROL "Nombre", -1, "Static", WS_GROUP, 192, 45, 30, 8
+  CONTROL "Domicilio", -1, "Static", WS_GROUP, 192, 69, 33, 8
+  CONTROL "CP/Población", -1, "Static", WS_GROUP, 192, 81, 49, 8
+  CONTROL "N.I.F.", -1, "Static", WS_GROUP, 192, 57, 23, 8
+  CONTROL "Provincia", -1, "Static", WS_GROUP, 192, 93, 35, 8
+  CONTROL "Teléfono", -1, "Static", WS_GROUP, 192, 105, 33, 8
   CONTROL "Almacén", -1, "Static", WS_GROUP, 450, 33, 31, 8
   CONTROL "Pago", -1, "Static", WS_GROUP, 450, 45, 31, 8
   CONTROL "Caja", -1, "Static", WS_GROUP, 450, 81, 31, 8
@@ -16514,14 +16515,14 @@ RCTPRV_1 DIALOG DISCARDABLE 50, 35, 670, 373
 STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 140, "Edit", WS_BORDER|WS_TABSTOP, 230, 30, 95, 11
-  CONTROL "", 141, "Edit", WS_BORDER|WS_TABSTOP, 230, 42, 215, 11
-  CONTROL "", 103, "Edit", WS_BORDER|WS_TABSTOP, 230, 54, 215, 11
-  CONTROL "", 106, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 230, 66, 95, 11
-  CONTROL "", 104, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 230, 78, 58, 11
-  CONTROL "", 105, "Edit", WS_BORDER|WS_TABSTOP, 290, 78, 150, 11
-  CONTROL "", 108, "Edit", WS_BORDER|WS_TABSTOP, 230, 90, 95, 11
-  CONTROL "", 107, "Edit", ES_AUTOHSCROLL|WS_BORDER, 358, 90, 82, 11
+  CONTROL "", 140, "Edit", WS_BORDER|WS_TABSTOP, 246, 30, 95, 11
+  CONTROL "", 141, "Edit", WS_BORDER|WS_TABSTOP, 246, 42, 200, 11
+  CONTROL "", 103, "Edit", WS_BORDER|WS_TABSTOP, 246, 54, 200, 11
+  CONTROL "", 106, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 246, 66, 95, 11
+  CONTROL "", 104, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 246, 78, 58, 11
+  CONTROL "", 105, "Edit", WS_BORDER|WS_TABSTOP, 306, 78, 139, 11
+  CONTROL "", 108, "Edit", WS_BORDER|WS_TABSTOP, 246, 90, 95, 11
+  CONTROL "", 107, "Edit", ES_AUTOHSCROLL|WS_BORDER, 374, 90, 71, 11
   CONTROL "", 150, "Edit", WS_BORDER|WS_TABSTOP, 488, 30, 70, 11
   CONTROL "", 151, "Edit", WS_BORDER, 560, 30, 108, 11
   CONTROL "", 160, "Edit", WS_BORDER|WS_TABSTOP, 488, 42, 70, 11
@@ -16536,9 +16537,9 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 165, "Edit", WS_BORDER|WS_TABSTOP, 488, 78, 70, 11
   CONTROL "", 166, "Edit", WS_BORDER, 560, 78, 108, 11
   CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 488, 90, 70, 11
-  CONTROL "", 171, "TBitMap", 0x00800000, 559, 90, 19, 11
+  CONTROL "", 171, "TBitmap", 0x00800000, 559, 90, 19, 11
   CONTROL "", 180, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 581, 90, 87, 11
-  CONTROL "", 120, "Edit", WS_BORDER|WS_TABSTOP, 91, 78, 85, 11
+  CONTROL "", 120, "Edit", WS_BORDER|WS_TABSTOP, 91, 78, 100, 11
   CONTROL "Aña&dir [F2]", 500, "Button", WS_TABSTOP, 44, 105, 50, 14
   CONTROL "&Modificar [F3]", 501, "Button", WS_TABSTOP, 99, 105, 50, 14
   CONTROL "&Eliminar [F4]", 502, "Button", WS_TABSTOP, 154, 105, 50, 14
@@ -16560,22 +16561,23 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 440, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|CBS_SORT|WS_VSCROLL|WS_TABSTOP, 503, 330, 55, 40
   CONTROL "", 450, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 560, 330, 34, 13
   CONTROL "", 100, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 91, 30, 26, 11
-  CONTROL "", 101, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 118, 30, 37, 11
-  CONTROL "", 102, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 156, 30, 19, 11
-  CONTROL "", 110, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 91, 42, 85, 11
-  CONTROL "", 130, "Edit", WS_BORDER|WS_TABSTOP, 91, 54, 85, 11
+  CONTROL "", 101, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 118, 30, 48, 11
+  CONTROL "", 102, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 167, 30, 25, 11
+  CONTROL "", 110, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 91, 42, 60, 11
+  CONTROL "", 111, "Edit", WS_BORDER|WS_TABSTOP, 152, 42, 40, 11
+  CONTROL "", 130, "Edit", WS_BORDER|WS_TABSTOP, 91, 54, 101, 11
   CONTROL "Factura de gastos", 550, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 44, 68, 74, 10
   CONTROL "Número", -1, "Static", WS_GROUP, 44, 33, 30, 8
   CONTROL "Fecha", -1, "Static", WS_GROUP, 44, 45, 30, 8
   CONTROL "Factura", -1, "Static", WS_GROUP, 44, 57, 30, 8
   CONTROL "Su fact.", -1, "Static", WS_GROUP, 44, 81, 30, 8
-  CONTROL "Proveedor", -1, "Static", WS_GROUP, 180, 33, 45, 8
-  CONTROL "Nombre", -1, "Static", WS_GROUP, 180, 45, 45, 8
-  CONTROL "Domicilio", -1, "Static", WS_GROUP, 180, 57, 45, 8
-  CONTROL "CP/Población", -1, "Static", WS_GROUP, 180, 81, 45, 8
-  CONTROL "N.I.F.", -1, "Static", WS_GROUP, 180, 69, 45, 8
-  CONTROL "Provincia", -1, "Static", WS_GROUP, 180, 93, 45, 8
-  CONTROL "Teléfono", -1, "Static", WS_GROUP, 326, 93, 30, 11
+  CONTROL "Proveedor", -1, "Static", WS_GROUP, 196, 33, 45, 8
+  CONTROL "Nombre", -1, "Static", WS_GROUP, 196, 45, 45, 8
+  CONTROL "Domicilio", -1, "Static", WS_GROUP, 196, 57, 45, 8
+  CONTROL "CP/Población", -1, "Static", WS_GROUP, 196, 81, 45, 8
+  CONTROL "N.I.F.", -1, "Static", WS_GROUP, 196, 69, 45, 8
+  CONTROL "Provincia", -1, "Static", WS_GROUP, 196, 93, 45, 8
+  CONTROL "Teléfono", -1, "Static", WS_GROUP, 342, 93, 30, 11
   CONTROL "Almacén", -1, "Static", WS_GROUP, 454, 33, 30, 8
   CONTROL "Pago", -1, "Static", WS_GROUP, 454, 45, 30, 8
   CONTROL "Caja", -1, "Static", WS_GROUP, 454, 81, 30, 8
